<resources>
    <string name="app_name">Submission Final</string>
    <string name="next">Next Match</string>
    <string name="last">Last Match</string>
    <string name="detail">Detail</string>
    <string name="description">Description</string>
    <string name="info">Info</string>
    <string name="sport">Sport</string>
    <string name="formed_year">Formed Year</string>
    <string name="country">Country</string>
    <string name="search">Search</string>
    <string name="detail_match">Detail Match</string>
    <string name="not_found">404 Not Found</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>
    <string name="formation">Formation</string>
    <string name="favorite">Favorite</string>
    <string name="match">Match</string>
    <string name="standings">Standings</string>
    <string name="team">Team</string>
    <string name="player">Player</string>
    <string name="nationality">Nationality</string>
    <string name="date_born">Date Born</string>
    <string name="position">Position</string>
    <string name="gender">Gender</string>
    <string name="event">Event</string>

    <integer-array name="id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </integer-array>

    <string-array name="logo">
        <item>i6o0kh1549879062.png</item>
        <item>8f5jmf1516458074.png</item>
        <item>0j55yv1534764799.png</item>
        <item>ocy2fe1566216901.png</item>
        <item>7onmyv1534768460.png</item>
        <item>dqo6r91549878326.png</item>
        <item>cplp641535733210.png</item>
        <item>sfhanl1547383730.png</item>
        <item>vw72bl1534096708.png</item>
        <item>vm1qlp1535986713.png</item>
    </string-array>

    <string-array name="name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
