<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <RadioGroup
            android:id="@+id/rg_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
                android:id="@+id/rb_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event"/>

        <RadioButton
                android:id="@+id/rb_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/team"/>

    </RadioGroup>

    <TextView
            android:id="@+id/tv_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_found"
            android:gravity="center"
            android:fontFamily="@font/merriweather_bold"
            android:textSize="21sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    <ProgressBar
            android:id="@+id/pro_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_search"
            android:layout_below="@+id/rg_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:visibility="gone"/>

</RelativeLayout>