<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ProgressBar
            android:id="@+id/pro_info_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    <ScrollView
            android:id="@+id/scroll_info_player"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <TextView
                    android:text="@string/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_desc_title_player"
                    android:fontFamily="@font/merriweather_bold"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    tools:text="Content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_desc_content_player"
                    android:fontFamily="@font/merriweather_regular"
                    android:textSize="12sp"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@+id/tv_desc_title_player"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <View
                    android:id="@+id/v_info_player"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@+id/tv_desc_content_player"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"/>

            <TextView
                    android:text="@string/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_info_player"
                    android:fontFamily="@font/merriweather_bold"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@+id/v_info_player"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:text="@string/position"
                    android:id="@+id/tv_position_player"
                    app:layout_constraintTop_toBottomOf="@+id/tv_info_player"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/tv_desc_title"/>

            <TextView
                    android:text="@string/gender"
                    android:id="@+id/tv_gender_player"
                    app:layout_constraintTop_toBottomOf="@+id/tv_position_player"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/tv_desc_title"/>

            <TextView
                    android:text="@string/date_born"
                    android:id="@+id/tv_born_player"
                    app:layout_constraintTop_toBottomOf="@+id/tv_gender_player"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/tv_desc_title"/>

            <TextView
                    android:text="@string/nationality"
                    android:id="@+id/tv_nation_player"
                    app:layout_constraintTop_toBottomOf="@+id/tv_born_player"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/tv_desc_title"/>

            <TextView
                    tools:text="Forward"
                    android:id="@+id/tv_position_content_player"
                    app:layout_constraintTop_toTopOf="@+id/tv_position_player"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_position_player"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/tv_desc_content"/>

            <TextView
                    tools:text="Male"
                    android:id="@+id/tv_gender_content_player"
                    app:layout_constraintTop_toTopOf="@+id/tv_gender_player"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_gender_player"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/tv_desc_content"/>

            <TextView
                    tools:text="12 Agu 1990"
                    android:id="@+id/tv_born_content_player"
                    app:layout_constraintTop_toTopOf="@+id/tv_born_player"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_born_player"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/tv_desc_content"/>

            <TextView
                    tools:text="Italy"
                    android:id="@+id/tv_nation_content_player"
                    app:layout_constraintTop_toTopOf="@+id/tv_nation_player"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_nation_player"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/tv_desc_content"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</RelativeLayout>