<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


        <TextView
                tools:text="90':Cenk Tosun;"
                android:id="@+id/tv_home_player_goal"
                style="@style/tv_desc_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/v_match" android:layout_marginBottom="8dp"/>

        <TextView
                tools:text="63':Dele Alli;"
                style="@style/tv_desc_content"
                android:id="@+id/tv_away_player_goal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/v_match" android:layout_marginBottom="8dp"/>

        <View
                android:id="@+id/v_match"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_yellow_card"/>

        <TextView
                android:text="@string/yellow_card"
                style="@style/tv_desc_title"
                android:id="@+id/tv_yellow_card"
                app:layout_constraintTop_toBottomOf="@+id/v_match"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:text="@string/red_card"
                style="@style/tv_desc_title"
                android:id="@+id/tv_red_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintTop_toBottomOf="@+id/tv_yellow_card"/>

        <TextView
                android:text="@string/formation"
                style="@style/tv_desc_title"
                android:id="@+id/tv_formation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_red_card"/>

        <TextView
                tools:text="2"
                style="@style/tv_desc_content"
                android:id="@+id/tv_yellowcard_home"
                app:layout_constraintTop_toTopOf="@+id/tv_yellow_card"
                app:layout_constraintBottom_toBottomOf="@+id/tv_yellow_card"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                tools:text="0"
                style="@style/tv_desc_content"
                android:id="@+id/tv_redcard_home"
                app:layout_constraintTop_toTopOf="@+id/tv_red_card"
                app:layout_constraintBottom_toBottomOf="@+id/tv_red_card"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                tools:text="4-3-3"
                style="@style/tv_desc_content"
                android:id="@+id/tv_formation_home"
                app:layout_constraintTop_toTopOf="@+id/tv_formation"
                app:layout_constraintBottom_toBottomOf="@+id/tv_formation"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                tools:text="3"
                style="@style/tv_desc_content"
                android:id="@+id/tv_yellowcard_away"
                app:layout_constraintBottom_toBottomOf="@+id/tv_yellow_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_yellow_card"/>

        <TextView
                tools:text="0"
                style="@style/tv_desc_content"
                android:id="@+id/tv_redcard_away"
                app:layout_constraintBottom_toBottomOf="@+id/tv_red_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_red_card"/>

        <TextView
                tools:text="4-4-2"
                style="@style/tv_desc_content"
                android:id="@+id/tv_formation_away"
                app:layout_constraintBottom_toBottomOf="@+id/tv_formation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_formation"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>