<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ProgressBar
            android:id="@+id/pro_info_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll_info_team"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <TextView
                    android:text="@string/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_desc_title_team"
                    android:fontFamily="@font/merriweather_bold"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    tools:text="Content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_desc_content_team"
                    android:fontFamily="@font/merriweather_regular"
                    android:textSize="12sp"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@+id/tv_desc_title_team"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <View
                    android:id="@+id/v_info_team"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@+id/tv_desc_content_team"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"/>

            <TextView
                    android:text="@string/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_info_team"
                    android:fontFamily="@font/merriweather_bold"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@+id/v_info_team"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:text="Alternate"
                    android:id="@+id/tv_alternate_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_info_team"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/tv_desc_title"/>

            <TextView
                    android:text="@string/formed_year"
                    android:id="@+id/tv_formed_team"
                    app:layout_constraintTop_toBottomOf="@+id/tv_alternate_title"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/tv_desc_title"/>

            <TextView
                    android:text="League"
                    android:id="@+id/tv_league_team"
                    app:layout_constraintTop_toBottomOf="@+id/tv_formed_team"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/tv_desc_title"/>

            <TextView
                    android:text="Stadium"
                    android:id="@+id/tv_stadium_team"
                    app:layout_constraintTop_toBottomOf="@+id/tv_league_team"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/tv_desc_title"/>

            <TextView
                    tools:text="Gunners"
                    android:id="@+id/tv_alternate_content"
                    app:layout_constraintTop_toTopOf="@+id/tv_alternate_title"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_alternate_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/tv_desc_content"/>

            <TextView
                    tools:text="1892"
                    android:id="@+id/tv_formed_content_team"
                    app:layout_constraintTop_toTopOf="@+id/tv_formed_team"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_formed_team"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/tv_desc_content"/>

            <TextView
                    tools:text="English Premier League"
                    android:id="@+id/tv_league_content_team"
                    app:layout_constraintTop_toTopOf="@+id/tv_league_team"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_league_team"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/tv_desc_content"/>

            <TextView
                    tools:text="Emirates Stadium"
                    android:id="@+id/tv_stadium_content_team"
                    app:layout_constraintTop_toTopOf="@+id/tv_stadium_team"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_stadium_team"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/tv_desc_content"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>